# keyhog

./: .bazelrc  .gitignore  BUILD.bazel  CHANGELOG.md  Cargo.toml  MODULE.bazel  README.md  TODO.md  demo-secret.env  demo.env  demo.tape
.github/actions/keyhog/: README.md  action.yml
.github/workflows/: ci.yml  differential-bench.yml  health-check.yml  keyhog.yml  release.yml  secretbench-nightly.yml  vendor-vyre.yml
crates/cli/: BUILD.bazel  Cargo.toml
crates/cli/src/: args.rs  lib.rs  main.rs  orchestrator.rs  orchestrator_config.rs  sources.rs
crates/cli/src/daemon/: client.rs  frame.rs  mod.rs  protocol.rs  server.rs
crates/cli/src/subcommands/: daemon.rs  mod.rs  scan.rs  scan_system.rs
crates/cli/tests/: e2e_binary.rs
crates/core/: BUILD.bazel  Cargo.toml
crates/core/src/: config.rs  dedup.rs  rule_filter.rs
crates/core/src/report/: sarif.rs
crates/core/tests/unit/: config.rs
crates/scanner/: BUILD.bazel  Cargo.toml  ast_dump.txt
crates/scanner/benches/: adversarial.rs  decode.rs  edge_cases.rs  scan_throughput.rs  size_pattern_sweep.rs
crates/scanner/data/: disclaimer-phrases.toml
crates/scanner/examples/: real_tree_benchmark.rs  scanner_standalone.rs
crates/scanner/src/: compiler.rs  entropy_avx512.rs  entropy_fast.rs  gpu.rs  hw_probe.rs  lib.rs  pipeline.rs  shared_regexes.rs  static_intern.rs  telemetry.rs  types.rs
crates/scanner/src/confidence/: mod.rs  prefixes.rs
crates/scanner/src/context/: false_positive.rs  inference.rs
crates/scanner/src/decode/: caesar.rs  json.rs  pipeline.rs  reverse.rs  url.rs
crates/scanner/src/engine/: backend.rs  boundary.rs  fallback_entropy.rs  fallback_generic.rs  hot_patterns.rs  mod.rs  scan.rs  scan_filters.rs  scan_gpu.rs  scan_gpu.rs.patch
crates/scanner/src/multiline/: config.rs  structural.rs
crates/scanner/src/structured/: parsers.rs
crates/scanner/tests/: all_detectors_self_validate.rs  all_tests.rs  comment_embed_runner.rs  companion_contracts_runner.rs  compound_encoding_runner.rs  contracts_runner.rs  cve_replay_runner.rs  decode_test.rs  encoding_explosion_runner.rs  entropy_edge_runner.rs  fallback_no_hit_branch_recall.rs  fallback_wire_regression_69.rs  gpu_ac_recall_bug_56.rs  gpu_ac_smoke.rs  gpu_parity.rs  gpu_proptest_invariants.proptest-regressions  gpu_proptest_invariants.rs  line_length_runner.rs  megakernel_parity.rs  noise_injection_runner.rs  oom_test.rs  path_shape_runner.rs  perf_floor.rs  performance_regression.rs  readme_claims.rs  routing_matrix.rs  rule_pipeline_shard_probe.rs  whitespace_normalization_runner.rs
crates/scanner/tests/adversarial/engine_cases/: evasion_fixtures.rs  support.rs  suppression.rs
crates/scanner/tests/contracts/: 123formbuilder-api-key.toml  4everland-api-token.toml  500px-api-key.toml  8x8-api-credentials.toml  abstract-api-credentials.toml  abtasty-credentials.toml  abuseipdb-api-key.toml  accuweather-api-key.toml  activecampaign-api-key.toml  activepieces-api-key.toml  adobe-api-key.toml  adobe-stock-api-key.toml  adp-api-credentials.toml  aerisweather-api-credentials.toml  africastalking-api-key.toml  agenta-api-key.toml  agora-app-credentials.toml  ai21-api-key.toml  airbrake-api-key.toml  airbyte-api-credentials.toml  airplane-api-key.toml  airtable-api-key.toml  akamai-api-credentials.toml  akoya-client-credentials.toml  alchemy-api-key.toml  alertmanager-credentials.toml  algolia-admin-api-key.toml  algolia-api-key.toml  algolia-search-key.toml  alienvault-otx-api-key.toml  amadeus-api-credentials.toml  amazon-advertising-api-credentials.toml  amazon-music-api-credentials.toml  amplitude-api-key.toml  anrok-api-key.toml  ansible-tower-token.toml  anthropic-api-key.toml  anydo-api-key.toml  anyscale-api-key.toml  apify-api-token.toml  (+303 more)
crates/scanner/tests/integration/: gpu.rs
crates/scanner/tests/property/: scanner_fuzz.rs
crates/sources/: BUILD.bazel  Cargo.toml
crates/sources/src/: docker.rs  filesystem.rs  github_org.rs  slack.rs  web.rs
crates/sources/src/binary/: mod.rs
crates/sources/src/filesystem/: read.rs
crates/sources/src/git/: diff.rs  history.rs
crates/sources/src/s3/: mod.rs
crates/sources/tests/integration/: filesystem.rs
crates/sources/tests/unit/: git_history.rs
crates/verifier/: BUILD.bazel  Cargo.toml
crates/verifier/src/: rate_limit.rs  ssrf.rs
crates/verifier/src/oob/: session.rs
crates/verifier/tests/: all_tests.rs
crates/verifier/tests/unit/: cache.rs  interpolate.rs
detectors/: algolia-admin-api-key.toml  algolia-api-key.toml  algolia-search-key.toml  asana-pat.toml  aws-ecr-token.toml  aws-secret-access-key.toml  azure-storage-account-key.toml  azure-subscription-key.toml  blur-api-key.toml  campaign-monitor-api-key.toml  carbon-black-api-key.toml  cerebrium-api-key.toml  cloudflare-api-token.toml  cloudflare-zero-trust-service-token.toml  constant-contact-api-key.toml  convertkit-api-key.toml  databricks-token.toml  delinea-secret-server-credentials.toml  digitalocean-spaces-credentials.toml  discord-bot-token.toml  drata-api-token.toml  drip-api-token.toml  github-user-to-server-token.toml  google-classroom-api-credentials.toml  hashicorp-vault-approle-credentials.toml  heroku-api-key.toml  honeybadger-api-key.toml  idenfy-api-credentials.toml  infura-project-credentials.toml  jumio-api-credentials.toml  kubernetes-secret.toml  marvel-api-credentials.toml  packer-credentials.toml  plivo-voice-auth.toml  prometheus-remote-write-credentials.toml  qualys-api-credentials.toml  remitly-api-credentials.toml  scaleway-api-key.toml  smartproxy-credentials.toml  sovos-api-key.toml  (+14 more)
docs/: DROP_IN_USAGE.md
fuzz/: Cargo.toml
fuzz/fuzz_targets/: decode_target.rs  regex_compile_target.rs  scanner_target.rs
scripts/: add_verify_specs.py  audit.sh  fix_detectors.py  fix_toml_escaping.py  publish.sh  vendor-vyre.sh
tools/: gen_contracts.py
tools/diff_bench/: run.py  synth_corpus.py
tools/secretbench/: .gitignore  README.md
tools/secretbench/access/: REQUEST_TEMPLATE.md
tools/secretbench/mirror/: generate.py  negatives.py  providers.py  wrappers.py
(+28 files in other folders)
