[package]
name = "keyhog-core"
description = "keyhog-core — shared data model and detector specifications for the KeyHog secret scanner"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Santh Project <contact@santh.dev>"]
license.workspace = true
repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog-core"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"
# Defensive: exclude the runtime-generated parse cache so a developer
# who forgot to `git clean` between scans can't ship a stale cache to
# crates.io. The .gitignore covers this for committed state; this
# covers `cargo package`.
exclude = ["detectors/.keyhog-cache.json"]

[package.metadata.santh]
status = "alpha"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
thiserror = "2"
tracing = "0.1"
regex = "1"
regex-syntax = "0.8"
sha2 = "0.10"
rayon = "1"
hex = "0.4"
once_cell = "1"
async-trait = "0.1"
serde_with = "3"
parking_lot = "0.12"
indexmap = "2"
blake3 = "1"
dirs = "6"
zeroize = { version = "1", features = ["derive"] }
anyhow = "1"
# Used for atomic-rename writes of `merkle.idx` and `calibration.json`
# via `NamedTempFile::persist()`. The Drop impl deletes the tmp on
# panic between create and rename, so a partial save doesn't leak a
# stale `tmp.NNN` next to the real cache file.
tempfile = "3"
# `vyre_libs::rule` for the declarative `.keyhogignore.toml` engine
# (see `crates/core/src/rule_filter.rs`). Pulls in the `rule`
# feature which compiles the CPU evaluator + the `regex` dep used
# by `RuleCondition::RegexMatch`.
vyre_libs = { package = "vyre-libs", version = "0.4.2", path = "../../../../libs/performance/matching/vyre/vyre-libs", features = ["rule"] }
smallvec = { version = "1" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[dev-dependencies]
proptest = "1"
tokio = { version = "1", features = ["full"] }
tracing-subscriber = { version = "0.3", features = ["fmt"] }
