[package]
name = "keyhog-sources"
description = "keyhog-sources — pluggable input backends for KeyHog (git, S3, Docker, Web)"
version.workspace = true
authors = ["Santh Project <contact@santh.dev>"]
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog-sources"
keywords.workspace = true
categories.workspace = true
readme = "README.md"

[package.metadata.santh]
status = "alpha"

[features]
default = ["git", "web"]
git = ["gix"]
web = ["dep:reqwest", "dep:serde_json", "dep:url"]
github = ["dep:reqwest", "dep:tempfile", "dep:serde", "dep:serde_json", "dep:base64"]
slack = ["dep:reqwest", "dep:serde", "dep:serde_json"]
s3 = [
    "dep:reqwest",
    "dep:serde",
    "dep:quick-xml",
    "dep:urlencoding",
    "dep:hmac",
    "dep:sha2",
    "dep:hex",
    "dep:chrono",
]
docker = ["dep:tar", "dep:tempfile"]
binary = ["dep:goblin", "dep:tempfile", "dep:glob", "dep:wait-timeout"]  # ELF/PE/Mach-O + Ghidra decompiler

[dependencies]
keyhog-core = { workspace = true }
codewalk = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rayon = { workspace = true }
gix = { workspace = true, optional = true }
memmap2 = { workspace = true }
memchr = { workspace = true }
regex = { workspace = true }
ziftsieve = { workspace = true, features = ["gzip", "lz4", "zstd", "snappy"] }
openpack = { workspace = true, features = ["zip", "apk", "ipa", "crx"] }
# Binary analysis dependencies
goblin = { workspace = true, optional = true }
glob = { workspace = true, optional = true }
wait-timeout = { workspace = true, optional = true }

[target.'cfg(unix)'.dependencies]
libc = { workspace = true }

[target.'cfg(target_os = "linux")'.dependencies]
io-uring = { workspace = true }

# Feature-gated optional deps. Previously declared inside the
# `[target.cfg(target_os = "linux")]` block, which silently scoped
# them to Linux only — every `web` / `github` / `s3` / `docker` /
# `binary` build on Windows or macOS failed with `unresolved
# import reqwest`. They need to be declared at workspace scope so
# all OSes that activate the corresponding feature can resolve them.
[dependencies.reqwest]
workspace = true
optional = true
features = ["blocking"]

[dependencies.base64]
workspace = true
optional = true

[dependencies.serde]
workspace = true
optional = true

[dependencies.serde_json]
workspace = true
optional = true

[dependencies.tempfile]
workspace = true
optional = true

[dependencies.quick-xml]
workspace = true
optional = true

[dependencies.tar]
workspace = true
optional = true

[dependencies.urlencoding]
workspace = true
optional = true

[dependencies.unicode-normalization]
workspace = true

# url crate is used by the WebSource SSRF filter (web.rs::is_disallowed_web_host)
# to match reqwest::Url::host() into Ipv4 / Ipv6 / Domain variants. The
# variant types are re-exported from reqwest internally but not as a
# public path, so we depend on `url` directly. Optional because only
# the `web` feature compiles the SSRF gate.
[dependencies.url]
workspace = true
optional = true

[dependencies.hmac]
workspace = true
optional = true

[dependencies.sha2]
workspace = true
optional = true

[dependencies.hex]
workspace = true
optional = true

[dependencies.chrono]
workspace = true
default-features = true
optional = true

[dev-dependencies]
flate2 = "1"
zip = "2.2"
httpmock = { workspace = true }
proptest = { workspace = true }
proptest-derive = { workspace = true }
tempfile = { workspace = true }
