[package]
name = "keyhog-verifier"
description = "keyhog-verifier — parallel async credential verification framework"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors = ["Santh Project <contact@santh.dev>"]
license.workspace = true
repository = "https://github.com/santhsecurity/keyhog"
homepage = "https://github.com/santhsecurity/keyhog"
documentation = "https://docs.rs/keyhog-verifier"
keywords = ["secret-scanner", "security", "credentials", "api-keys", "git"]
categories = ["command-line-utilities", "development-tools"]
readme = "README.md"

[package.metadata.santh]
status = "alpha"

[features]
default = ["live"]
live = []

[dependencies]
keyhog-core = { workspace = true }
reqwest = { workspace = true, features = ["blocking", "json", "stream"] }
tokio = { workspace = true, features = ["full"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
percent-encoding = { workspace = true }
sha2 = { workspace = true }
hmac = { workspace = true }
hex = { workspace = true }
base64 = { workspace = true }
futures-util = { workspace = true }
codewalk = { workspace = true }
lazy_static = { workspace = true }
parking_lot = { workspace = true }
dashmap = { workspace = true }
url = { workspace = true }
bogon = { path = "../../vendor/bogon" }

# OOB verification — embedded interactsh client (gated behind --verify-oob).
rsa = { workspace = true }
aes = { workspace = true }
cfb-mode = { workspace = true }
rand = { workspace = true }
uuid = { workspace = true }
serde = { workspace = true, features = ["derive"] }

# AWS SigV4 signing for credential verification

[dev-dependencies]
rusty-fork = { workspace = true }
tokio = { workspace = true, features = ["full"] }
toml = { workspace = true }
